--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
        <div class="mensagem">
            <h1>sinopse</h1>
            <p>
-           <b>ter sido agraciado com os poderes onipotentes dos deuses egípcios - e preso com a mesma rapidez - Adão Negro (Johnson) é libertado de sua tumba terrena, pronto para liberar sua forma única de justiça no mundo moderno.</b>
+           <b>Estamos em Guarulhos na década de 90. Dinho, Sérgio, Samuel, Julio e Bento são garotos típicos da época com pouco dinheiro e muitos sonhos. Eles nem imaginam que o humor debochado e inteligente,</b>
            </p>
        </div>
         
         
         <div class="content"></div>
-        <video controls poster="https://image.tmdb.org/t/p/original/1kuxpJOxKSxpCSLaOjrqLi6KpmE.jpg" id="vid1564730217"s src="https://dls7rxd829s2x.cloudfront.net/data/8/0ca5ced8.mp4">
+        <video controls poster="https://image.tmdb.org/t/p/original/zyjXrdYoprdsPjjOKjzlgVbzdCI.jpg" id="vid1564730217"s src="https://dls7rxd829s2x.cloudfront.net/data/8/0ca5ced8.mp4">
             <track kind="subtitles" src="https://raw.githubusercontent.com/jansenflix/trabalho1/main/lgenda.srt.vtt" srclang="en" label="original" default>
             <track kind="subtitles" src="" srclang="pt" label="Português"> 
             <track kind="subtitles" src="" srclang="en" label="Inglês">     
